[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"
description = "Quickly calculate the Nth number of the Fibonacci sequence."
repository = "https://github.com/egriff89/rusty-fibonacci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
num-bigint = "0.4.4"
num-traits = "0.2.17"
